--- a/deploy/live/fullstack/apply/ingress.yaml
+++ b/deploy/live/fullstack/apply/ingress.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: '{{{M3_PROJECT}}}-{{{M3_COMPONENET}}}-{{{M3_ENVIRONMENT}}}'
@@ -18,42 +18,60 @@ spec:
     - host: 'm3ntorship.net'
       http:
         paths:
-          - backend:
-              serviceName: '{{{M3_PROJECT}}}-{{{M3_COMPONENET}}}-{{{M3_ENVIRONMENT}}}'
-              servicePort: 80
-            path: /
+          - path: "/"
+            pathType: Prefix
+            backend:
+              service:
+                name: '{{{M3_PROJECT}}}-{{{M3_COMPONENET}}}-{{{M3_ENVIRONMENT}}}'
+                port:
+                  number: 80
     - host: 'm3ntorship.com'
       http:
         paths:
-          - backend:
-              serviceName: '{{{M3_PROJECT}}}-{{{M3_COMPONENET}}}-{{{M3_ENVIRONMENT}}}'
-              servicePort: 80
-            path: /
-    - host: 'be.m3ntorship.net'
-      http:
-        paths:
-          - backend:
-              serviceName: '{{{M3_PROJECT}}}-{{{M3_COMPONENET}}}-{{{M3_ENVIRONMENT}}}'
-              servicePort: 81
-            path: /
-    - host: 'be.m3ntorship.com'
-      http:
-        paths:
-          - backend:
-              serviceName: '{{{M3_PROJECT}}}-{{{M3_COMPONENET}}}-{{{M3_ENVIRONMENT}}}'
-              servicePort: 81
-            path: /
+          - path: "/"
+            pathType: Prefix
+            backend:
+              service:
+                name: '{{{M3_PROJECT}}}-{{{M3_COMPONENET}}}-{{{M3_ENVIRONMENT}}}'
+                port:
+                  number: 80
     - host: 'm3ntorship.tech'
       http:
         paths:
-          - backend:
-              serviceName: '{{{M3_PROJECT}}}-{{{M3_COMPONENET}}}-{{{M3_ENVIRONMENT}}}'
-              servicePort: 80
-            path: /
+          - path: "/"
+            pathType: Prefix
+            backend:
+              service:
+                name: '{{{M3_PROJECT}}}-{{{M3_COMPONENET}}}-{{{M3_ENVIRONMENT}}}'
+                port:
+                  number: 80
+    - host: 'be.m3ntorship.com'
+      http:
+        paths:
+          - path: "/"
+            pathType: Prefix
+            backend:
+              service:
+                name: '{{{M3_PROJECT}}}-{{{M3_COMPONENET}}}-{{{M3_ENVIRONMENT}}}'
+                port:
+                  number: 81
+    - host: 'be.m3ntorship.net'
+      http:
+        paths:
+          - path: "/"
+            pathType: Prefix
+            backend:
+              service:
+                name: '{{{M3_PROJECT}}}-{{{M3_COMPONENET}}}-{{{M3_ENVIRONMENT}}}'
+                port:
+                  number: 81
     - host: 'be.m3ntorship.tech'
       http:
         paths:
-          - backend:
-              serviceName: '{{{M3_PROJECT}}}-{{{M3_COMPONENET}}}-{{{M3_ENVIRONMENT}}}'
-              servicePort: 81
-            path: /
+          - path: "/"
+            pathType: Prefix
+            backend:
+              service:
+                name: '{{{M3_PROJECT}}}-{{{M3_COMPONENET}}}-{{{M3_ENVIRONMENT}}}'
+                port:
+                  number: 81
