--- a/.github/workflows/m3ntorship-dev_fullstack_dev.yaml
+++ b/.github/workflows/m3ntorship-dev_fullstack_dev.yaml
@@ -5,7 +5,6 @@ on:
   push:
     branches:
       - develop
-      - deployment-fullstack-workflows
 
 jobs: 
   prepare:
@@ -17,8 +16,8 @@ jobs:
       # version: develop
       image_frontend: m3ntorshipci/m3ntorshipcom-frontend
       image_backend: m3ntorshipci/m3ntorshipcom-backend
-      dockerfile_frontend: Dockerfile.playground.frontend
-      dockerfile_backend: Dockerfile.playground.backend
+      dockerfile_frontend: Dockerfile.m3ntorship-dev.frontend
+      dockerfile_backend: Dockerfile.m3ntorship-dev.backend
     steps:
     - uses: actions/checkout@v2
     - id: prepare
