add www subdomain

--- a/deploy/live/fullstack/apply/ingress.yaml
+++ b/deploy/live/fullstack/apply/ingress.yaml
@@ -35,6 +35,16 @@ spec:
                 name: '{{{M3_PROJECT}}}-{{{M3_COMPONENET}}}-{{{M3_ENVIRONMENT}}}'
                 port:
                   number: 80
+    - host: 'www.m3ntorship.com'
+      http:
+        paths:
+          - path: "/"
+            pathType: Prefix
+            backend:
+              service:
+                name: '{{{M3_PROJECT}}}-{{{M3_COMPONENET}}}-{{{M3_ENVIRONMENT}}}'
+                port:
+                  number: 80
     - host: 'm3ntorship.tech'
       http:
         paths:
